crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__it_works-2.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(\"if false { print(0) } else { print(1) }\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 28975365249621,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 28975365249621,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Branch {
                                value: AirExpression {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 86926095748863,
                                    },
                                    type: Computed(
                                        Bool,
                                    ),
                                    kind: Constant(
                                        Boolean(
                                            false,
                                        ),
                                    ),
                                },
                                pos_block: AirBlockId(
                                    1,
                                ),
                                neg_block: AirBlockId(
                                    2,
                                ),
                            },
                        },
                        AirBlockId(
                            3,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 57950730499242,
                                    },
                                ),
                            ),
                        },
                        AirBlockId(
                            1,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 120040798891287,
                                    },
                                    kind: Expression(
                                        AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: 120040798891287,
                                            },
                                            type: Computed(
                                                Structural(
                                                    TypeId {
                                                        id: SyntaxId {
                                                            file_id: None,
                                                            number: 1,
                                                        },
                                                        kind: "auryn_compiler::auryn::air::typecheck::types::StructuralType",
                                                    },
                                                ),
                                            ),
                                            kind: Call(
                                                Call {
                                                    function: AirExpression {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 132458812569696,
                                                        },
                                                        type: Computed(
                                                            Intrinsic(
                                                                TypeId {
                                                                    id: SyntaxId {
                                                                        file_id: None,
                                                                        number: 1,
                                                                    },
                                                                    kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                },
                                                            ),
                                                        ),
                                                        kind: Variable(
                                                            Intrinsic(
                                                                Print,
                                                            ),
                                                        ),
                                                    },
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 157294839926514,
                                                            },
                                                            type: Computed(
                                                                NumberLiteral(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: None,
                                                                            number: 1,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::NumberLiteralType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    0,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                    generic_arguments: Computed(
                                                        [],
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                            finalizer: Goto(
                                AirBlockId(
                                    3,
                                ),
                            ),
                        },
                        AirBlockId(
                            2,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 215245570425756,
                                    },
                                    kind: Expression(
                                        AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: 215245570425756,
                                            },
                                            type: Computed(
                                                Structural(
                                                    TypeId {
                                                        id: SyntaxId {
                                                            file_id: None,
                                                            number: 1,
                                                        },
                                                        kind: "auryn_compiler::auryn::air::typecheck::types::StructuralType",
                                                    },
                                                ),
                                            ),
                                            kind: Call(
                                                Call {
                                                    function: AirExpression {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 227663584104165,
                                                        },
                                                        type: Computed(
                                                            Intrinsic(
                                                                TypeId {
                                                                    id: SyntaxId {
                                                                        file_id: None,
                                                                        number: 1,
                                                                    },
                                                                    kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                },
                                                            ),
                                                        ),
                                                        kind: Variable(
                                                            Intrinsic(
                                                                Print,
                                                            ),
                                                        ),
                                                    },
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 252499611460983,
                                                            },
                                                            type: Computed(
                                                                NumberLiteral(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: None,
                                                                            number: 2,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::NumberLiteralType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    1,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                    generic_arguments: Computed(
                                                        [],
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                            finalizer: Goto(
                                AirBlockId(
                                    3,
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
