crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__it_works.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(\"print(1)\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 63558865708856,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 63558865708856,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 154357245292936,
                                    },
                                    kind: Expression(
                                        AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: 154357245292936,
                                            },
                                            type: Computed(
                                                Structural(
                                                    TypeId {
                                                        id: SyntaxId {
                                                            file_id: None,
                                                            number: 1,
                                                        },
                                                        kind: "auryn_compiler::auryn::air::typecheck::types::StructuralType",
                                                    },
                                                ),
                                            ),
                                            kind: Call(
                                                Call {
                                                    function: AirExpression {
                                                        id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 181596759168160,
                                                        },
                                                        type: Computed(
                                                            Intrinsic(
                                                                TypeId {
                                                                    id: SyntaxId {
                                                                        file_id: None,
                                                                        number: 1,
                                                                    },
                                                                    kind: "auryn_compiler::auryn::air::typecheck::types::IntrinsicType",
                                                                },
                                                            ),
                                                        ),
                                                        kind: Variable(
                                                            Intrinsic(
                                                                Print,
                                                            ),
                                                        ),
                                                    },
                                                    arguments: [
                                                        AirExpression {
                                                            id: SyntaxId {
                                                                file_id: Some(
                                                                    FileId(
                                                                        1,
                                                                    ),
                                                                ),
                                                                number: 236075786918608,
                                                            },
                                                            type: Computed(
                                                                NumberLiteral(
                                                                    TypeId {
                                                                        id: SyntaxId {
                                                                            file_id: None,
                                                                            number: 1,
                                                                        },
                                                                        kind: "auryn_compiler::auryn::air::typecheck::types::NumberLiteralType",
                                                                    },
                                                                ),
                                                            ),
                                                            kind: Constant(
                                                                Number(
                                                                    1,
                                                                ),
                                                            ),
                                                        },
                                                    ],
                                                    generic_arguments: Computed(
                                                        [],
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 127117731417712,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
