crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__reassignment.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(r#\"\n            let a: I32 = 0\n            if true {\n                let a: I32 = 1\n            }\n            a\n            \"#)"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 24324997987339,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 24324997987339,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 62549994824586,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                0,
                                            ),
                                            expected_type: Some(
                                                Application {
                                                    id: SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: 86874992811925,
                                                    },
                                                    type: Path {
                                                        base_id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 93824992236879,
                                                        },
                                                        base: Resolved(
                                                            I32,
                                                        ),
                                                        segments: [],
                                                    },
                                                    generic_arguments: [],
                                                },
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 114674990511741,
                                                },
                                                type: Computed(
                                                    I32,
                                                ),
                                                kind: Constant(
                                                    Number(
                                                        0,
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Branch {
                                value: AirExpression {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 149424987636511,
                                    },
                                    type: Computed(
                                        Bool,
                                    ),
                                    kind: Constant(
                                        Boolean(
                                            true,
                                        ),
                                    ),
                                },
                                pos_block: AirBlockId(
                                    1,
                                ),
                                neg_block: AirBlockId(
                                    2,
                                ),
                            },
                        },
                        AirBlockId(
                            3,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 267574977860729,
                                    },
                                    kind: Expression(
                                        AirExpression {
                                            id: SyntaxId {
                                                file_id: Some(
                                                    FileId(
                                                        1,
                                                    ),
                                                ),
                                                number: 267574977860729,
                                            },
                                            type: Computed(
                                                I32,
                                            ),
                                            kind: Variable(
                                                Local(
                                                    AirLocalValueId(
                                                        0,
                                                    ),
                                                ),
                                            ),
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 55599995399632,
                                    },
                                ),
                            ),
                        },
                        AirBlockId(
                            1,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 177224985336327,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                1,
                                            ),
                                            expected_type: Some(
                                                Application {
                                                    id: SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: 201549983323666,
                                                    },
                                                    type: Path {
                                                        base_id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 208499982748620,
                                                        },
                                                        base: Resolved(
                                                            I32,
                                                        ),
                                                        segments: [],
                                                    },
                                                    generic_arguments: [],
                                                },
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 229349981023482,
                                                },
                                                type: Computed(
                                                    I32,
                                                ),
                                                kind: Constant(
                                                    Number(
                                                        1,
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Goto(
                                AirBlockId(
                                    3,
                                ),
                            ),
                        },
                        AirBlockId(
                            2,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Goto(
                                AirBlockId(
                                    3,
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
